Fix small icon alignment

--- a/app/assets/stylesheets/cards.scss
+++ b/app/assets/stylesheets/cards.scss
@@ -112,7 +112,6 @@
 
 .card-links {
   float: right;
-  text-align: right;
 
   &.expense-links {
     margin-top: 0.5rem;
